Fix margin and alignment of alerts

--- a/src/components/UserSchedule.css
+++ b/src/components/UserSchedule.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 150px;
+  margin-top: 55px;
 }
 
 .user_schedule_container {
@@ -93,7 +93,7 @@
 .user_current_schedule_update_button {
   font-size: 20px;
   width: 100%;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
   padding: 10px;
   transition: background .5s;
 }
